--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "mint-ui": "^2.2.9",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
