--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "mint-ui": "^2.2.9",
+    "moment": "^2.24.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue": "^2.4.2",
